--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container h-100 d-flex flex-column justify-content-center align-items-center">
+  <h1>Augmented battles</h1>
+  <p>More than a board game</p>
+  <%= link_to "Start", games_path, class: "btn btn-primary" %>
+</div>
