--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body><%= render "shared/navbar" %>
-<%= render "shared/flashes" %>
-
+  <body>
+  <%#= render "shared/navbar" %>
+  <%= render "shared/flashes" %>
+  <div style="height: 100vh">
     <%= yield %>
+  </div>
   </body>
 </html>
