created basic stimulus conbtroller with mind-ar

--- a/app/views/games/live.html.erb
+++ b/app/views/games/live.html.erb
@@ -1,1 +1,8 @@
-<div data-controller="game"></div>
+<div data-controller="game">
+  <div id="game-control">
+    <p>Augmented Battles</p>
+  </div>
+  <div id="game-container"
+    data-game-target="container">
+  </div>
+</div>
