--- a/app/views/games/live.html.erb
+++ b/app/views/games/live.html.erb
@@ -2,7 +2,8 @@
   <div id="game-control">
     <p>Augmented Battles</p>
   </div>
-  <div id="game-container"
+  <div 
+    id="game-container"
     data-game-target="container">
   </div>
 </div>
