--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,6 +1,11 @@
 <div class="container my-5">
   <h1>Battle #<%= @game.id %></h1>
-  <%= link_to 'Join', game_live_path(@game), class: 'btn btn-primary my-5'  %>
-  <p>Or via QR code:</p>
-  <%= @svg.html_safe %>
+  <%= link_to 'Join', game_join_path(@game), class: 'btn btn-primary my-5'  %>
+  <div class="mb-5">
+    <p>Or via QR code:</p>
+    <%= @svg.html_safe %></div>
+  <div class="mb-5">
+    <p>Or see the live:</p>
+  <%= link_to 'Live game', game_live_path(@game), class: 'btn btn-primary'  %>
+  </div>
 </div>
