connection of backend army info with front end mind ar

--- a/app/views/games/live.html.erb
+++ b/app/views/games/live.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="game">
+<div data-controller="game" data-game-armies-value=<%= @armies %>>
   <div id="game-control">
     <p>Augmented Battles</p>
   </div>
