--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,7 +2,8 @@
 
 // For example:
 $red: #FD1015;
-$blue: #0D6EFD;
+$deep-blue: rgb(12, 30, 58);
+$blue: rgb(28, 68, 133);
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
