--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,11 +1,12 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
+$red: #d82b2b;
+$green: #2b962b;
 $deep-blue: rgb(12, 30, 58);
-$blue: rgb(28, 68, 133);
+$blue-gradient: linear-gradient(135deg, rgba(85,129,191,1) 9%, rgba(20,64,126,1) 54%, rgba(52,50,86,1) 100%);
+$blue: rgb(196, 212, 238);
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
