--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
+  <body style="overflow: hidden;">
   <%#= render "shared/navbar" %>
   <%= render "shared/flashes" %>
   <div style="height: 100vh">
