--- a/app/assets/stylesheets/components/_game.scss
+++ b/app/assets/stylesheets/components/_game.scss
@@ -6,42 +6,14 @@
   border: 4px solid $deep-blue;
   box-shadow: inset 0px 0px 4px 4px $deep-blue;
 }
-.game-ctrl {
+.game-score {
   z-index: 2;
   display: flex;
   justify-content: space-between;
   width: 100%;
   padding: 16px;
 }
-.game-setting {
-  position: absolute;
-  bottom: 24px;
-  right: 24px;
-  z-index: 2;
-  text-align: right;
-  i {
-    text-shadow: 0px 0px 12px $blue;
-    color: $deep-blue;
-    font-size: 40px;
-  }
-  .game-setting-menu {
-    padding: 16px;
-    list-style: none;
-    background-color: white;
-    width: 120px;
-    background: $blue-gradient;
-    border: 4px solid #87b0f200;
-    color: $blue;
-    li {
-      padding: 4px;
-      border-top: 1px solid $deep-blue;
-      &:last-child {
-        border-bottom: 1px solid $deep-blue;
-      }
-    }
-  }
-}
-.game-ctrl-player {
+.game-score-player {
   padding: 16px;
   background: $blue-gradient;
   width: 240px;
@@ -65,5 +37,69 @@
   }
   span {
     color: white;
+  }
+}
+.game-setting {
+  position: absolute;
+  bottom: 24px;
+  right: 24px;
+  z-index: 2;
+  text-align: right;
+  i {
+    text-shadow: 0px 0px 12px $blue;
+    color: $deep-blue;
+    font-size: 40px;
+  }
+  .game-setting-menu {
+    &.active {
+      display: block;
+    }
+    display: none;
+    padding: 16px;
+    list-style: none;
+    background-color: white;
+    width: 120px;
+    background: $blue-gradient;
+    border: 4px solid #87b0f200;
+    color: $blue;
+    li {
+      padding: 4px;
+      border-top: 1px solid $deep-blue;
+      &:last-child {
+        border-bottom: 1px solid $deep-blue;
+      }
+    }
+  }
+}
+.game-ctrl {
+  position: absolute;
+  bottom: 24px;
+  right: 50%;
+  transform: translateX(50%);
+  z-index: 2;
+  text-align: center;
+}
+.game-ctrl-msg {
+  display: none;
+  &.active {
+    display: block;
+  }
+  p {
+    padding: 16px 32px;
+    background: $blue-gradient;
+    color: $blue;
+    font-size: 24px;
+    box-shadow: 0 0 8px 4px #c4d4ee;
+    border-radius: 50px;
+  } 
+  a {
+    background-color: #c4d4ee;
+    color: $deep-blue;
+    padding: 8px 16px;
+    box-shadow: 0px 8px 15px 0px $deep-blue;
+    font-size: 12px;
+    &.inactive {
+      box-shadow: none;
+    }
   }
 }
