--- a/app/views/games/live.html.erb
+++ b/app/views/games/live.html.erb
@@ -1,7 +1,7 @@
 <div class="game-frame" data-controller="game" data-game-armies-value=<%= @armies.to_json %> >
-  <div class="game-ctrl">
+  <div class="game-score">
     <% @armies.each_with_index do |(player, squad), index| %>
-      <div class="game-ctrl-player <%= index == 0 ? "player-left player-turn" : "player-right" %>">
+      <div class="game-score-player <%= index == 0 ? "player-left player-turn" : "player-right" %>">
         <p>Player <%= index + 1 %>: <span><%= player %></span></p>
         <ul class="list-inline m-0">
           <% squad['army'].each do |soldier| %>
@@ -19,10 +19,24 @@
     <% end %>
   </div>
   <div class="game-setting">
-    <ul class="game-setting-menu">
-      <li>Profil</li>
-      <li>Back</li>
+    <ul class="game-setting-menu active">
+      <li><a href="#">Profil</a></li>
+      <li><a href="#">Back</a></li>
     </ul>
-    <i class="fa-solid fa-gear"></i>
+    <a href="#"><i class="fa-solid fa-gear"></i></a>
+  </div>
+  <div class="game-ctrl">
+    <div class="game-ctrl-msg active">
+      <p>Your turn! <i class="fa-solid fa-arrows-up-down-left-right"></i></p>
+      <a href="">Continue to attack <i class="fa-solid fa-bolt"></i></a>
+    </div>
+    <div class="game-ctrl-msg">
+      <p>Time to attack! <i class="fa-solid fa-bolt"></i></p>
+      <a href="">Next player <i class="fa-solid fa-forward"></i></a>
+    </div>
+    <div class="game-ctrl-msg">
+      <p>Defense time! <i class="fa-solid fa-shield-halved"></i></p>
+      <a class="inactive" href="">Wait for your turn...</a>
+    </div>
   </div>
 </div>
