--- a/app/views/games/live.html.erb
+++ b/app/views/games/live.html.erb
@@ -1,7 +1,12 @@
-<div class="game-frame" data-controller="game" data-game-armies-value=<%= @armies.to_json %> >
+<div 
+  class="game-frame" 
+  data-controller="game" 
+  data-game-armies-value=<%= @armies.to_json %> 
+  data-game-currentuser-value=<%= current_user %>
+>
   <div class="game-score">
     <% @armies.each_with_index do |(player, squad), index| %>
-      <div class="game-score-player <%= index == 0 ? "player-left player-turn" : "player-right" %>">
+      <div class="game-score-player <%= index == 0 ? "player-left" : "player-right" %> <%= squad['turn'] ? "player-turn" : "" %> ">
         <p>Player <%= index + 1 %>: <span><%= player %></span></p>
         <ul class="list-inline m-0">
           <% squad['army'].each do |soldier| %>
