--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,4 +2,5 @@
   <h1>Augmented battles</h1>
   <p>More than a board game</p>
   <%= link_to "Start", games_path, class: "btn btn-primary" %>
+  <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-outline-primary"%>
 </div>
