addded step control logic to live

--- a/app/assets/stylesheets/components/_game.scss
+++ b/app/assets/stylesheets/components/_game.scss
@@ -92,7 +92,7 @@
     box-shadow: 0 0 8px 4px #c4d4ee;
     border-radius: 50px;
   } 
-  a {
+  a, span{
     background-color: #c4d4ee;
     color: $deep-blue;
     padding: 8px 16px;
