--- a/app/views/games/live.html.erb
+++ b/app/views/games/live.html.erb
@@ -3,6 +3,7 @@
   data-controller="game" 
   data-game-armies-value=<%= @armies.to_json %> 
   data-game-currentuser-value='<%= current_user.email %>'
+  data-game-game-id-value='<%= @game.id %>'
 >
   <div class="game-score">
     <% @armies.each_with_index do |(player, squad), index| %>
