update game screen size to fit ipad

--- a/app/assets/stylesheets/components/_game.scss
+++ b/app/assets/stylesheets/components/_game.scss
@@ -1,10 +1,10 @@
 .game-frame {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: relative;
   overflow: hidden;
-  border: 4px solid $deep-blue;
-  box-shadow: inset 0px 0px 4px 4px $deep-blue;
+  // border: 4px solid $deep-blue;
+  // box-shadow: inset 0px 0px 4px 4px $deep-blue;
 }
 .game-score {
   z-index: 2;
@@ -41,7 +41,7 @@
 }
 .game-setting {
   position: absolute;
-  bottom: 24px;
+  bottom: 40px;
   right: 24px;
   z-index: 2;
   text-align: right;
@@ -76,7 +76,7 @@
 }
 .game-ctrl {
   position: absolute;
-  bottom: 24px;
+  bottom: 40px;
   right: 50%;
   transform: translateX(50%);
   z-index: 2;
