--- a/app/views/games/live.html.erb
+++ b/app/views/games/live.html.erb
@@ -32,7 +32,7 @@
   <div class="game-setting">
     <ul class="game-setting-menu" data-game-target="settingMenu">
       <li><%= link_to "Profil", game_path(@game) %></li>
-      <li><%= link_to "Back", game_path(@game) %></li>
+      <li><%= link_to "Game menu", game_path(@game) %></li>
     </ul>
     <a href="#" data-action="click->game#openSetting:prevent"><i class="fa-solid fa-gear"></i></a>
   </div>
