created base for attack

--- a/app/views/games/live.html.erb
+++ b/app/views/games/live.html.erb
@@ -37,6 +37,7 @@
     <a href="#" data-action="click->game#openSetting:prevent"><i class="fa-solid fa-gear"></i></a>
   </div>
   <div class="game-ctrl">
+    <a data-game-target="fight" class="game-ctrl-fight active" href="#" data-action="click->game#fight:prevent" >Fight ⚡️</a>
     <div data-game-target="move" class="game-ctrl-msg active">
       <p>Your turn! <i class="fa-solid fa-arrows-up-down-left-right"></i></p>
       <a href="#" data-action="click->game#nextTurn:prevent" >Continue to attack <i class="fa-solid fa-bolt"></i></a>
