--- a/app/assets/stylesheets/components/_game.scss
+++ b/app/assets/stylesheets/components/_game.scss
@@ -81,6 +81,8 @@
   transform: translateX(50%);
   z-index: 2;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 .game-ctrl-msg {
   display: none;
@@ -105,4 +107,21 @@
       box-shadow: none;
     }
   }
+}
+
+.game-ctrl-fight {
+  display: none;
+  &.active {
+    display: flex;
+  }
+  background: $blue-gradient;
+  color: white;
+  font-size: 24px;
+  box-shadow: 0 0 24px 24px white;
+  border-radius: 50%;
+  height: 180px;
+  width: 180px;
+  margin-bottom: 64px;
+  justify-content: center;
+  align-items: center;
 }
