added moving of soldier through arrow feature for DemoScene

--- a/app/assets/stylesheets/components/_game.scss
+++ b/app/assets/stylesheets/components/_game.scss
@@ -12,6 +12,7 @@
   justify-content: space-between;
   width: 100%;
   padding: 16px;
+  position: absolute;
 }
 .game-score-player {
   padding: 16px;
