--- a/app/views/games/live.html.erb
+++ b/app/views/games/live.html.erb
@@ -13,7 +13,7 @@
         data-game-target="score"
         data-user='<%= player %>'
         >
-        <p>Player <%= index + 1 %>: <span><%= player %></span></p>
+        <p>Player <%= index + 1 %>: <span><%= player == current_user.id ? "You" : "The enemy" %></span></p>
         <ul class="list-inline m-0">
           <% squad['army'].each do |soldier| %>
             <li class="list-inline-item m-0" id="life-<%= soldier['name']%>" style="color: #<%= squad['color'] %>">
