--- a/app/views/games/live.html.erb
+++ b/app/views/games/live.html.erb
@@ -15,8 +15,8 @@
         >
         <p>Player <%= index + 1 %>: <span><%= player == current_user.id ? "You" : "The enemy" %></span></p>
         <ul class="list-inline m-0">
-          <% squad['army'].each do |soldier| %>
-            <li class="list-inline-item m-0" id="life-<%= soldier['name']%>" style="color: #<%= squad['color'] %>">
+          <% squad['army'].select{ |s| s['mana'] > 0 }.each do |soldier| %>
+            <li data-game-target="fist" class="list-inline-item m-0" id="life-<%= soldier['id']%>" style="color: #<%= squad['color'] %>">
               <i class="fa-solid fa-hand-fist"></i>
             </li>
           <% end %>
