--- a/app/assets/stylesheets/components/_game.scss
+++ b/app/assets/stylesheets/components/_game.scss
@@ -126,3 +126,30 @@
   justify-content: center;
   align-items: center;
 }
+
+.game-winner-msg {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: #8BC6EC;
+  background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+  // display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  display: none;
+  z-index: 2;
+  color: black;
+  a, span{
+    border-radius: 50px;
+    background-color: #c4d4ee;
+    color: $deep-blue;
+    padding: 8px 16px;
+    box-shadow: 0px 8px 15px 0px $deep-blue;
+    font-size: 12px;
+    &.inactive {
+      box-shadow: none;
+    }
+  }
+}
