correct misuse of the word turn to step in game controller

--- a/app/views/games/live.html.erb
+++ b/app/views/games/live.html.erb
@@ -40,11 +40,11 @@
     <a data-game-target="fight" class="game-ctrl-fight active" href="#" data-action="click->game#fight:prevent" >Fight ⚡️</a>
     <div data-game-target="move" class="game-ctrl-msg active">
       <p>Your turn! <i class="fa-solid fa-arrows-up-down-left-right"></i></p>
-      <a href="#" data-action="click->game#nextTurn:prevent" >Continue to attack <i class="fa-solid fa-bolt"></i></a>
+      <a href="#" data-action="click->game#nextStep:prevent" >Continue to attack <i class="fa-solid fa-bolt"></i></a>
     </div>
     <div data-game-target="attack" class="game-ctrl-msg">
       <p>Time to attack! <i class="fa-solid fa-bolt"></i></p>
-      <a href="#" data-action="click->game#nextTurn:prevent" >Next player <i class="fa-solid fa-forward"></i></a>
+      <a href="#" data-action="click->game#nextStep:prevent" >Next player <i class="fa-solid fa-forward"></i></a>
     </div>
     <div data-game-target="defense" class="game-ctrl-msg">
       <p>Defense time! <i class="fa-solid fa-shield-halved"></i></p>
